# baca

./: .envrc  .gitignore  Makefile  README.md  pyproject.toml
src/baca/: __init__.py  __main__.py  app.py  baca.css  config.py  db.py  exceptions.py  models.py
src/baca/components/: contents.py  events.py  windows.py
src/baca/ebooks/: __init__.py  azw.py  base.py  epub.py  mobi.py
src/baca/resources/: config.ini  style.css
src/baca/tools/: __init__.py
src/baca/utils/: app_resources.py  cli.py  ebooks.py  html_parser.py  keys_parser.py  queries.py  systems.py  tempdir.py  urls.py  user_appdirs.py
tests/: test_html_parser.py
tools/: debug.py
