[tool.poetry]
name = "baca"
version = "0.1.13"
description = "TUI Ebook Reader"
authors = ["Benawi Adha <benawiadha@gmail.com>"]
license = "GPL-3.0"
readme = "README.md"
packages = [
    { include = "baca", from = "src" }
]

[tool.poetry.scripts]
baca = "baca.__main__:main"

[tool.poetry.dependencies]
python = "^3.10"
textual = "^0.16.0"
beautifulsoup4 = "^4.12.0"
markdownify = "^0.11.6"
appdirs = "^1.4.4"
peewee = "^3.16.0"
fuzzywuzzy = "^0.18.0"

[tool.poetry.group.dev.dependencies]
black = "^23.1.0"
isort = "^5.12.0"
ipython = "^8.11.0"
textual = {extras = ["dev"], version = "^0.16.0"}
pytest = "^7.2.2"
ipdb = "^0.13.13"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pyright]
exclude = ["src/baca/tools"]

[tool.black]
line-length = 120
target-version = ['py310']
exclude = "src/baca/tools/"

[tool.isort]
skip = "src/baca/tools/"
